<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedFilters">

    <TextView
        android:id="@+id/indirizzoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/indirizzo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/indirizzoEdit"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/indirizzoString"
        android:layout_toRightOf="@id/indirizzoString"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/via_pertini_45"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/indirizzoEdit"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ratingBar"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/mediaString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="37dp"
        android:text="@string/media_recensioni" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_toEndOf="@id/mediaString"
        android:layout_toRightOf="@id/mediaString"
        android:numStars="5" />

    <TextView
        android:id="@+id/tipoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="22dp"
        android:text="@string/tipo_di_posto" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_toEndOf="@id/tipoString"
        android:layout_toRightOf="@id/tipoString"
        android:entries="@array/location_types" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/typeSpinner"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/maximumEdit"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/prezzoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:text="@string/prezzo"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/minimoString"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider3"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/prezzoString"
        android:layout_toRightOf="@id/prezzoString"
        android:text="@string/minimo" />

    <TextView
        android:id="@+id/massimoString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimoString"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/prezzoString"
        android:layout_toRightOf="@id/prezzoString"
        android:gravity="end"
        android:text="@string/massimo" />

    <EditText
        android:id="@+id/minimumEdit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@id/minimoString"
        android:layout_toRightOf="@id/minimoString"
        android:ems="10"
        android:hint="@string/_10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/maximumEdit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimumEdit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@id/minimoString"
        android:layout_toRightOf="@id/massimoString"
        android:ems="10"
        android:hint="@string/_30"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:text="@string/applica" />
</RelativeLayout>